--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -15,8 +15,8 @@
       </mat-form-field>
     </div>
   </form>
-  <button mat-raised-button color="primary">Primary</button>
-  <button mat-raised-button color="accent">Accent</button>
+  <button mat-raised-button color="primary" (click)="onAddHero()">Save</button>
+  <button mat-raised-button color="accent" (click)="onCancelHero()">Cancel</button>
   <hr />
   <!-- Heroes List-->
   <div fxLayout="row" fxLayoutGap="10px">
