--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,33 +1,4 @@
 <div class="container" fxLayoutGap="18px">
-  <!-- Dashboard  -->
-  <p>Heros Detail Form</p>
-  <form class="form">
-    <div>
-      <mat-form-field appearance="standard">
-        <mat-label>Last Name</mat-label>
-        <input matInput [(ngModel)]="name" name="name" />
-      </mat-form-field>
-    </div>
-    <div>
-      <mat-form-field appearance="standard">
-        <mat-label>E-Mail</mat-label>
-        <input matInput type="email" [(ngModel)]="email" name="email" />
-      </mat-form-field>
-    </div>
-  </form>
-  <button mat-raised-button color="primary" (click)="onAddHero()">Save</button>
-  <button mat-raised-button color="accent" (click)="onCancelHero()">Cancel</button>
-  <hr />
-  <!-- Heroes List-->
-  <div fxLayout="row" fxLayoutGap="10px">
-    <mat-list>
-      <div mat-subheader>Hero Listing</div>
-      <mat-list-item *ngFor="let hero of heroList">
-        <mat-icon mat-list-icon>person</mat-icon>
-        <div mat-line style="color: '#7b50c7'">{{ hero.name }}</div>
-        <div mat-line>{{ hero.email }}</div>
-      </mat-list-item>
-      <mat-divider></mat-divider>
-    </mat-list>
-  </div>
+  <app-add-hero (heroCreated)="onHeroAdded($event)"></app-add-hero>
+  <app-hero-list></app-hero-list>
 </div>
