Add @input() heroElement: hero;

--- a/src/app/hero-list/hero-list.component.html
+++ b/src/app/hero-list/hero-list.component.html
@@ -1,13 +1,8 @@
-<p>hero-list works!</p>
-<!-- Heroes List-->
-<div fxLayout="row" fxLayoutGap="10px">
-  <mat-list>
-    <div mat-subheader>Hero Listing</div>
-    <mat-list-item *ngFor="let hero of heroList">
-      <mat-icon mat-list-icon>person</mat-icon>
-      <div mat-line style="color: '#7b50c7'">{{ hero.name }}</div>
-      <div mat-line>{{ hero.email }}</div>
-    </mat-list-item>
-    <mat-divider></mat-divider>
-  </mat-list>
-</div>
+<!-- Heroes List Element-->
+
+<mat-list-item>
+  <mat-icon mat-list-icon>person</mat-icon>
+  <div mat-line style="color: '#7b50c7'">{{ heroElement.name }}</div>
+  <div mat-line>{{ heroElement.email }}</div>
+</mat-list-item>
+<mat-divider></mat-divider>
